--- a/tuix-derive/Cargo.toml
+++ b/tuix-derive/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 name = "tuix-derive"
-version = "0.1.0"
+version = "0.2.0"
+authors = ["George Atkinson"]
+license = "MIT"
+repository = "https://github.com/geom3trik/tuix"
 edition = "2018"
 
 [lib]
