--- a/widgets/Cargo.toml
+++ b/widgets/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "tuix_widgets"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["George Atkinson"]
 license = "MIT/Apache-2.0"
 repository = "https://github.com/geom3trik/tuix"
 edition = "2018"
 
 [dependencies]
-femtovg = { git = "https://github.com/femtovg/femtovg", branch = "master"}
+femtovg = "0.2.5"
 keyboard-types = { version = "0.5.0", default-features = false }
 num-traits = "0.2.14"
 # tuix-derive = { version = "0.1.0", path = "../tuix-derive" }
-tuix_core = { version = "0.1.0", path = "../core"}
+tuix_core = { version = "0.2.0", path = "../core"}
