Add popup with textboxes example
- Remove on_submit from textbox focus out and capture out.
- TODO - add callbacks for cancel textbox input and focus out. Need better input validation system.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,6 +79,10 @@ path = "examples/widgets/knob.rs"
 name = "popup"
 path = "examples/widgets/popup.rs"
 
+[[example]]
+name = "popup_textbox"
+path = "examples/widgets/popup_textbox.rs"
+
 # [[example]]
 # name = "tooltip"
 # path = "examples/widgets/tooltip.rs"
