--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["George Atkinson"]
 license = "MIT"
 repository = "https://github.com/geom3trik/tuix"
 edition = "2018"
+description = "Core parts of tuix"
 
 [dependencies]
 cssparser = "0.27.2"
