--- a/dylib/Cargo.toml
+++ b/dylib/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["George Atkinson"]
 license = "MIT"
 repository = "https://github.com/geom3trik/tuix"
 edition = "2018"
+description = "Crate for forcing tuix to dynamically link"
 
 
 [lib]
