--- a/tuix-derive/Cargo.toml
+++ b/tuix-derive/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["George Atkinson"]
 license = "MIT"
 repository = "https://github.com/geom3trik/tuix"
 edition = "2018"
+description = "Derive macros for tuix"
 
 [lib]
 proc-macro = true
