--- a/glutin/Cargo.toml
+++ b/glutin/Cargo.toml
@@ -12,5 +12,5 @@ description = "Glutin backend for tuix"
 glutin = "0.27.0"
 femtovg = "0.2.5"
 keyboard-types = { version = "0.5.0", default-features = false }
-tuix_core = { path = "../core" }
+tuix_core = { path = "../core", version = "0.2"}
 fnv = "1.0.7"
